[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simprovise"
dynamic = ["version"]
description = 'A Python library for process-based discrete event simulation'
readme = "README.rst"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
keywords = ["simulation", "discrete event simulation"]
authors = [
  { name = "Howard Klein", email = "hsk@howardklein.net" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "greenlet",
  "scipy",
  "numpy",
]

[project.urls]
Documentation = "https://simprovise.readthedocs.io/en/latest/index.html"
Issues = "https://github.com/hsklein/simprovise/issues"
Source = "https://github.com/hsklein/simprovise"

[tool.hatch.version]
path = "simprovise/__init__.py"

[tool.hatch.build]
exclude = [
  "simprovise/test/",
  "/docs/",
  "/.git/",
]



#[tool.hatch.envs.types]
#extra-dependencies = [
  #"mypy>=1.0.0",
#]
#[tool.hatch.envs.types.scripts]
#check = "mypy --install-types --non-interactive {args:src/simprovise tests}"

#[tool.coverage.run]
#source_pkgs = ["simprovise", "tests"]
#branch = true
#parallel = true
#omit = [
  #"src/simprovise/__about__.py",
#]

#[tool.coverage.paths]
#simprovise = ["src/simprovise", "*/simprovise/src/simprovise"]
#tests = ["tests", "*/simprovise/tests"]

#[tool.coverage.report]
#exclude_lines = [
  #"no cov",
  #"if __name__ == .__main__.:",
  #"if TYPE_CHECKING:",
#]
